--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,10 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "types": [
+      "vitest"
+    ]
   },
   "include": [
     "src"
