--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,7 +16,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": [
+      "vitest"
+    ]
   },
   "include": [
     "vite.config.ts"
