--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,10 +16,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "types": [
-      "vitest"
-    ]
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "vite.config.ts"
