--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,11 @@
 name: Codecov
+
 on:
   push:
-    branches: [ "*" ]
+    branches: ["*"]
+  pull_request:
+    branches: ["*"]
+
 jobs:
   test:
     runs-on: ubuntu-latest
