--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Run tests and generate coverage
         run: npm run test -- --coverage
 
+      - name: Build
+        run: npm run build
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
