--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           upload_sources: true
           upload_translations: false
+          download_sources: true
           download_translations: true
           localization_branch_name: l10n_crowdin_translations
           create_pull_request: true
