--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -15,9 +15,9 @@ jobs:
       - name: crowdin action
         uses: crowdin/github-action@v2
         with:
-          upload_sources: true
+          upload_sources: false
           upload_translations: false
-          download_sources: true
+          download_sources: false
           download_translations: true
           localization_branch_name: l10n_crowdin_translations
           create_pull_request: true
