--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /**/i18n/en/*.*
-    translation: /**/i18n/%two_letters_code%/%original_file_name%
+  - source: /**/i18n/source.json
+    translation: /**/i18n/%two_letters_code%/translation.json
