--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -5,6 +5,7 @@ on:
     branches: [ 'mkj/crowdin' ]
   schedule:
     - cron: '27 7 * * *' # daily at 07:27 (UTC)
+  workflow_dispatch:
 
 jobs:
   synchronize-with-crowdin:
