--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -11,6 +11,9 @@ on:
     - cron: '27 7 * * *' # daily at 07:27 (UTC)
   workflow_dispatch:
 
+strategy:
+  max-parallel: 1
+
 jobs:
   synchronize-with-crowdin:
     runs-on: ubuntu-latest
