--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /**/i18n/source.json
-    translation: /**/i18n/%two_letters_code%/translation.json
+  - source: src/i18n/source.json
+    translation: src/i18n/%two_letters_code%/translation.json
