--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Download translations
         uses: crowdin/github-action@v2
         with:
-          upload_sources: true
+          upload_sources: false
           upload_translations: false
           download_sources: true
           download_translations: true
