--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,4 +1,4 @@
 preserve_hierarchy: true
 files:
   - source: src/i18n/source.json
-    translation: src/i18n/%two_letters_code%/translation.json
+    translation: src/i18n/%locale%/translation.json
