--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Download translations
         uses: crowdin/github-action@v2
         with:
-          upload_sources: false
+          upload_sources: true
           upload_translations: false
-          download_sources: true # crowdin is the single source of truth
+          download_sources: false
           download_translations: true
           localization_branch_name: l10n_crowdin_translations
           create_pull_request: true
