--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint-staged": "npm run lint -- --fix",
     "test": "vitest",
     "preview": "vite preview",
-    "extract": "formatjs extract 'src/**/*.{ts,tsx}' --ignore='**/*.d.ts' --out-file './extracted/en.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]'",
-    "extract-simple": "formatjs extract 'src/**/*.{ts,tsx}' --ignore='**/*.d.ts' --out-file './src/i18n/source.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple",
+    "i18n-extract": "formatjs extract 'src/**/*.{ts,tsx}' --ignore='**/*.d.ts' --out-file './src/i18n/source.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "husky"
