chore(i18n): only run action if source files changes

--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -3,6 +3,8 @@ name: Crowdin Action
 on:
   push:
     branches: [ 'main' ]
+    paths:
+      - 'src/i18n/source.json'
   schedule:
     - cron: '27 4 * * *' # daily at 04:27 (UTC)
   workflow_dispatch:
