feat(i18n): setup Crowdin (#106)
* i18n: add crowdin github action

* chore(i18n): use single source file for translations

* chore(ci): trigger crowdin action periodically

* chore(ci): trigger crowdin action manually

* chore(ci): add labels to crowdin PRs

* chore(ci): add reviewer to crowdin PRs

* chore(ci): upload sources to crowdin branch

* chore(ci): prevent parallel execution of crowdin action

* chore(crowdin): preserve directory structure

* chore(ci): use locale in path for translation files

* chore(i18n): dynamically load translations

* chore(i18n): push sources to crowdin

* chore(build): automatically export language keys on commit

* chore(i18n): change crowdin base branch to main

* chore(i18n): only run action if source files changes

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,4 @@
+preserve_hierarchy: true
 files:
-  - source: /**/i18n/en.*
-    translation: '%original_path%/%two_letters_code%.json'
+  - source: src/i18n/source.json
+    translation: src/i18n/%locale%/translation.json
