--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,9 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
+      "@types/*": [
+        "./src/types/*"
+      ],
       "@/*": [
         "./src/*"
       ]
