--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:build": "NODE_ENV=development npm run build -- --mode development",
     "build": "tsc -b && vite build",
     "lint": "eslint . --max-warnings=0",
     "lint-staged": "npm run lint -- --fix",
