chore: do not enable in-context tooling in storybook

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "vitest",
     "preview": "vite preview",
     "i18n-extract": "formatjs extract 'src/**/*.{ts,tsx}' --ignore='**/*.d.ts' --out-file './src/i18n/source.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "storybook": "VITE_BITCR_DEV_INCLUDE_CROWIN_IN_CONTEXT_TOOLING=false storybook dev -p 6006",
+    "storybook:build": "storybook build",
     "prepare": "husky"
   },
   "dependencies": {
