dev: include crowdin in-context tool in dev mode (#155)
* feat(crowdin): enable crowdin in-context tool in dev build

* chore(build): ability to build in development mode

* chore: ability to control if locale is initialized from browser lang

* chore: do not enable in-context tooling in storybook

--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:build": "NODE_ENV=development npm run build -- --mode development",
     "build": "tsc -b && vite build",
     "lint": "eslint . --max-warnings=0",
     "lint-staged": "npm run lint -- --fix",
     "test": "vitest",
     "preview": "vite preview",
     "i18n-extract": "formatjs extract 'src/**/*.{ts,tsx}' --ignore='**/*.d.ts' --out-file './src/i18n/source.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "storybook": "VITE_BITCR_DEV_INCLUDE_CROWIN_IN_CONTEXT_TOOLING=false storybook dev -p 6006",
+    "storybook:build": "storybook build",
     "prepare": "husky"
   },
   "dependencies": {
