feat: generate openapi client

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint-staged": "npm run lint -- --fix",
     "test": "vitest",
     "preview": "vite preview",
+    "openapi:generate": "npx openapi-typescript ./api/api.openapi.yml --output ./src/api/api.d.ts",
     "i18n-extract": "formatjs extract 'src/**/*.{ts,tsx}' --ignore='**/*.d.ts' --out-file './src/i18n/source.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple",
     "storybook": "VITE_BITCR_DEV_INCLUDE_CROWIN_IN_CONTEXT_TOOLING=false storybook dev -p 6006",
     "storybook:build": "storybook build",
@@ -28,7 +29,6 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
-    "@types/date-fns": "^2.5.3",
     "@tanstack/react-query": "^5.62.3",
     "big.js": "^6.2.2",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +36,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
+    "openapi-fetch": "^0.13.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -61,6 +62,7 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/big.js": "^6.2.2",
+    "@types/date-fns": "^2.5.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
@@ -77,6 +79,8 @@
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.11",
     "msw": "^2.6.8",
+    "openapi-typescript": "^7.4.4",
+    "openapi-typescript-helpers": "^0.0.15",
     "postcss": "^8.4.49",
     "storybook": "^8.4.4",
     "tailwindcss": "^3.4.15",
