--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:build": "NODE_ENV=development npm run build -- --mode development",
     "build": "tsc -b && vite build",
     "lint": "eslint . --max-warnings=0",
-    "lint-staged": "npm run lint -- --fix",
+    "lint-staged": "npm run lint -- --fix --no-warn-ignored",
     "test": "vitest",
     "preview": "vite preview",
     "i18n-extract": "formatjs extract 'src/**/*.{ts,tsx}' --ignore='**/*.d.ts' --out-file './src/i18n/source.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple",
@@ -29,8 +29,8 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
-    "@types/date-fns": "^2.5.3",
     "@tanstack/react-query": "^5.62.3",
+    "@types/date-fns": "^2.5.3",
     "big.js": "^6.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -81,6 +81,7 @@
     "msw": "^2.6.8",
     "postcss": "^8.4.49",
     "storybook": "^8.4.4",
+    "storybook-addon-remix-react-router": "^3.0.2",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.15.0",
