Change clenup strategy

--- a/.github/workflows/storybook_cd.yml
+++ b/.github/workflows/storybook_cd.yml
@@ -40,7 +40,11 @@ jobs:
       uses: google-github-actions/setup-gcloud@v0.6.0
 
     - name: Cleanup GCP bucket
-      run: gcloud storage rm --recursive --continue-on-error '${{ env.DEST_BUCKET }}/**'
+      run: |
+        FILES_COUNT = $(gcloud storage ls --recursive ${{ env.DEST_BUCKET }} | wc -l)
+        if [ $FILES_COUNT -gt 0 ]; then
+          gcloud storage rm --recursive '${{ env.DEST_BUCKET }}/**'
+        fi
 
     - name: Upload Storybook static sources
       run: gcloud stroage cp --recursive storybook-static ${{ env.DEST_BUCKET }}
