--- a/.github/workflows/storybook_cd.yml
+++ b/.github/workflows/storybook_cd.yml
@@ -42,6 +42,7 @@ jobs:
     - name: Cleanup GCP bucket
       run: |
         FILES_COUNT=$(gcloud storage ls --recursive ${{ env.DEST_BUCKET }} | wc -l)
+        echo $FILES_COUNT
         if [ $FILES_COUNT -gt 0 ]; then
           gcloud storage rm --recursive '${{ env.DEST_BUCKET }}/**'
         fi
