--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "VITE_BITCR_DEV_INCLUDE_CROWIN_IN_CONTEXT_TOOLING=false vite",
-    "dev:build": "NODE_ENV=development npm run build -- --mode development",
+    "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:dev": "NODE_ENV=development npm run build -- --mode development",
+    "build:crowdin": "VITE_BITCR_DEV_INCLUDE_CROWDIN_IN_CONTEXT_TOOLING=true npm run build:dev",
     "lint": "eslint . --max-warnings=0",
     "lint-staged": "npm run lint -- --fix --no-warn-ignored",
     "test": "vitest",
     "preview": "vite preview",
     "i18n-extract": "formatjs extract 'src/**/*.{ts,tsx}' --ignore='**/*.d.ts' --out-file './src/i18n/source.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple",
-    "storybook": "VITE_BITCR_DEV_INCLUDE_CROWIN_IN_CONTEXT_TOOLING=false storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "prepare": "husky"
   },
