--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.469.0",
     "motion": "^11.16.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
