--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
     "@eslint/js": "^9.17.0",
+    "@faker-js/faker": "^9.4.0",
     "@formatjs/cli": "^6.3.15",
+    "@mswjs/data": "^0.16.2",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-onboarding": "^8.4.7",
