--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=http://127.0.0.1:8000
+VITE_API_BASE_URL=http://127.0.0.1:8000/api
 VITE_API_MOCKING_ENABLED=false
 VITE_BITCR_DEV_INCLUDE_CROWDIN_IN_CONTEXT_TOOLING=false
