--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "i18n-extract": "formatjs extract 'src/**/*.{ts,tsx}' --ignore='**/*.d.ts' --out-file './src/i18n/source.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "docker:build": "docker build --tag wildcat-dashboard-ui .",
+    "docker:rebuild": "npm run docker:build -- --no-cache",
+    "docker:up": "docker compose up"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
